--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,58 +11,50 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="131dp"
         app:srcCompat="@drawable/logo"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="54dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="125dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="99dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="54dp"
-        android:layout_marginRight="54dp" />
+        android:layout_marginLeft="1dp" />
 
     <Button
         android:id="@+id/btnJogar"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="53dp"
         android:background="@android:color/background_dark"
         android:onClick="btnJogarOnClick"
         android:text="Jogar"
         android:textColor="@android:color/background_light"
-        android:textSize="16sp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="38dp"
-        app:layout_constraintTop_toBottomOf="@+id/textoDeExplicacao"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="35dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/textoDeExplicacao"
         android:layout_width="0dp"
-        android:layout_height="97dp"
+        android:layout_height="wrap_content"
         android:text="@string/txtExplicativo"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="54dp"
+        android:layout_marginStart="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="54dp"
+        android:layout_marginEnd="42dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="143dp"
+        android:layout_marginBottom="182dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="54dp"
-        android:layout_marginRight="54dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginLeft="42dp"
+        android:layout_marginRight="42dp" />
 </android.support.constraint.ConstraintLayout>
