Imagens trocando junto com as questões

--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -30,7 +30,7 @@
         android:id="@+id/resposta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Acertou!"
+        android:text="@string/acertou"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
@@ -47,7 +47,7 @@
         android:layout_width="170dp"
         android:layout_height="50dp"
         android:background="@android:color/background_dark"
-        android:text="Jogar Novamente"
+        android:text="@string/btnJogarNovamenteString"
         android:onClick="btnJogarNovamenteOnClick"
         android:textColor="@android:color/background_light"
         tools:layout_constraintRight_creator="1"
