--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="1dp" />
+        android:layout_marginLeft="1dp"
+        android:contentDescription="" />
 
     <Button
         android:id="@+id/btnJogar"
@@ -29,7 +30,7 @@
         android:layout_marginBottom="53dp"
         android:background="@android:color/background_dark"
         android:onClick="btnJogarOnClick"
-        android:text="Jogar"
+        android:text="@string/btnJogarString"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
