--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,22 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="131dp"
-        app:srcCompat="@drawable/logo"
-        tools:layout_constraintTop_creator="1"
+        android:layout_height="150dp"
+        android:layout_marginLeft="1dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="99dp"
-        tools:layout_constraintLeft_creator="1"
+        android:contentDescription=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="1dp"
-        android:contentDescription="" />
+        app:srcCompat="@drawable/logo"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/btnJogar"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/background_dark"
         android:onClick="btnJogarOnClick"
         android:text="@string/btnJogarString"
@@ -54,8 +54,9 @@
         android:layout_marginEnd="42dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="182dp"
+        android:layout_marginBottom="156dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="42dp"
-        android:layout_marginRight="42dp" />
+        android:layout_marginRight="42dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
