--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@drawable/background"
     tools:context="com.example.viniciusnunes.memequiz.QuizActivity"
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/pergunta"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="42dp"
         android:layout_marginLeft="42dp"
@@ -47,7 +47,7 @@
 
     <ImageView
         android:id="@+id/imgPergunta"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="8dp"
@@ -68,7 +68,7 @@
 
     <RadioGroup
         android:id="@+id/rgRespostas"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="176dp"
         android:layout_marginBottom="23dp"
         android:layout_marginEnd="7dp"
@@ -81,7 +81,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pergunta"
-        app:layout_constraintVertical_bias="0.5"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
